--- a/src/ReservationWindow.form
+++ b/src/ReservationWindow.form
@@ -13,13 +13,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <model>
-            <item value="Warsaw"/>
-            <item value="Cracow"/>
-            <item value="Wroclaw"/>
-            <item value="Modlin"/>
-            <item value="Lodz"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="fef2f" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
@@ -27,24 +21,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <model>
-            <item value="Bangok"/>
-            <item value="Paris"/>
-            <item value="Madrid"/>
-            <item value="Berlin"/>
-            <item value="Monachium"/>
-            <item value="Barcelona"/>
-            <item value="London"/>
-            <item value="Washington"/>
-            <item value="Beijing"/>
-            <item value="Moscow"/>
-            <item value="Rome"/>
-            <item value="Warsaw"/>
-            <item value="Cracow"/>
-            <item value="Wroclaw"/>
-            <item value="Modlin"/>
-            <item value="Lodz"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="b16e8" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
@@ -52,10 +29,7 @@
           <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <model>
-            <item value="Domestic flights"/>
-            <item value="International flights"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="93072" class="javax.swing.JButton" binding="startReservationButton" default-binding="true">
