--- a/src/Login.form
+++ b/src/Login.form
@@ -45,7 +45,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d3b6f" class="javax.swing.JButton" binding="logInButton" default-binding="true">
+      <component id="d3b6f" class="javax.swing.JButton" binding="mainButton" default-binding="true">
         <constraints>
           <grid row="4" column="0" row-span="6" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
