--- a/src/ReservationWindow.form
+++ b/src/ReservationWindow.form
@@ -33,7 +33,7 @@
           <toolTipText value="DOMESTIC OR INTERNATIONAL"/>
         </properties>
       </component>
-      <component id="93072" class="javax.swing.JButton" binding="startReservationButton" default-binding="true">
+      <component id="93072" class="javax.swing.JButton" binding="reservationButton" default-binding="true">
         <constraints>
           <grid row="5" column="1" row-span="2" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
